<resources>
    <string name="app_name">AniWatch</string>
    <string name="recommended_for_you">RECOMMENDED FOR YOU</string>
    <string name="full_name">Rifa Indra Setiawan</string>
    <string name="short_name">Rifa</string>
    <string name="email_bangkit">a008b4ky3832@bangkit.academy</string>
    <string name="group">MD - 47</string>
    <string name="submission_akhir_aplikasi_android">Submission Akhir Aplikasi Android</string>
    <string-array name="anime_list">
        <item>Your Name</item>
        <item>A Silent Voice</item>
        <item>Demon Slayer</item>
        <item>Weathering With You</item>
        <item>A Whisker Away</item>
        <item>Suzume no Tojimari</item>
        <item>The Tunnel to Summer</item>
        <item>Jujutsu Kaisen 0</item>
        <item>Fireworks</item>
        <item>Hello World</item>
    </string-array>
    <string-array name="anime_release_date">
        <item>07 Dec 2016</item>
        <item>03 May 2017</item>
        <item>06 Jan 2021</item>
        <item>21 Aug 2019</item>
        <item>18 June 2020</item>
        <item>08 March 2023</item>
        <item>09 Sept 2022</item>
        <item>24 Dec 2021</item>
        <item>01 Nov 2017</item>
        <item>20 Sept 2019</item>
    </string-array>
    <string-array name="anime_genre">
        <item>Fantasy, Romance</item>
        <item>Romance, Drama</item>
        <item>Action, Fantasy</item>
        <item>Romance</item>
        <item>Drama</item>
        <item>Romance, Drama</item>
        <item>Fantasy, Romance</item>
        <item>Action, Fantasy</item>
        <item>Romance, Drama</item>
        <item>Fantasy, Romance</item>
    </string-array>
    <string-array name="anime_rating">
        <item>10/10</item>
        <item>9/10</item>
        <item>8/10</item>
        <item>8/10</item>
        <item>7/10</item>
        <item>8/10</item>
        <item>8/10</item>
        <item>8/10</item>
        <item>7/10</item>
        <item>8/10</item>
    </string-array>
</resources>