<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".AccountPage">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:titleTextAppearance="@style/ToolbarTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleCentered="true"
        app:navigationIcon="@drawable/back_arrow" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_1"
        android:backgroundTintMode="src_in"
        android:shape="rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/circle_view"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/circle_1"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:background="@drawable/profile_circle"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2" />

    <TextView
        android:id="@+id/profile_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="Profile"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/circle_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/full_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle_view" />

    <TextView
        android:id="@+id/short_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/short_name"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/email_bangkit"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@+id/icon_email"
        app:layout_constraintTop_toBottomOf="@+id/short_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <ImageView
        android:id="@+id/icon_email"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/icon_email"
        android:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/guideline_1"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <ImageView
        android:id="@+id/icon_group"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/icon_group"
        android:backgroundTint="@color/yellow"
        app:layout_constraintStart_toStartOf="@+id/guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/icon_email" />

    <TextView
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/group"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_group"
        app:layout_constraintStart_toEndOf="@+id/icon_group"
        app:layout_constraintTop_toTopOf="@+id/icon_group" />

    <ImageView
        android:id="@+id/icon_assignment"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/icon_assignment"
        android:backgroundTint="@color/yellow"
        app:layout_constraintStart_toStartOf="@+id/guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/icon_group" />

    <TextView
        android:id="@+id/assignment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/submission_akhir_aplikasi_android"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_assignment"
        app:layout_constraintStart_toEndOf="@+id/icon_group"
        app:layout_constraintTop_toTopOf="@+id/icon_assignment" />

</androidx.constraintlayout.widget.ConstraintLayout>